--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pointer-tracker",
+  "name": "@slickstream/pointer-tracker",
   "version": "2.0.3",
   "description": "Track mouse/touch/pointer events through one interface",
   "main": "dist/PointerTracker.js",
